--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="only-post-title-holder">
                         <h2 class="entry-title excerpt">
                             <a href="single.html">
-                                The name "Aqua" comes from the Latin word for water. The satellite was launched from Vandenberg Air Force Base on May 4, 2002, aboard a Delta II rocket. Aqua is on a Sun-synchronous orbit. It flies as the third in the satellite formation called the "A Train" with several other satellites (OCO-2, the Japanese GCOM W1, CALIPSO, CloudSat, and Aura).
+                                The name "Aqua" comes from the Latin word for water. The satellite was launched from Vandenberg Air Force Base on May 4, 2002, aboard a Delta II rocket. Aqua is on a Sun-synchronous orbit. It flies as the third in the satellite formation called the "A Train" with several other satellites (OCO-2, the Japanese GCOM W1, CALIPSO, CloudSat, and Aura.
                             </a>
                         </h2>
                         <div class="cat-links">
