--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
                 <article id="post-4" class="relative blog-item-holder">
                     <div class="post-thumb thumb-image two_third_thumb right">
-                      <video width="700" height="240" controls autoplay>
+                      <video  controls autoplay>
     <source src="http://aqua.nasa.gov/sites/default/files/airs_uswest_h264.mov" type=video/ogg>
     <source src="/build/videos/arcnet.io(7-sec).mp4" type=video/mp4>
   </video>
@@ -336,7 +336,7 @@
 
                     </li>
                     <li class="left-footer-content mobile">
-                         <i class="fa fa-heart"></i> by <a href="https://colorlib.com" target="_blank">Off to Space</a>.
+                         <i class="fa fa-heart"></i> by <a href="" target="_blank">Off to Space</a>.
                     </li>
                 </ul>
             </div>
