--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <article id="post-4" class="relative blog-item-holder">
                     <div class="post-thumb thumb-image two_third_thumb right">
-                      <video width="700" height="240" controls autoplay>
+                      <video  controls autoplay>
     <source src="http://aqua.nasa.gov/sites/default/files/aqua_modis_h264.mov" type=video/ogg>
     <source src="/build/videos/arcnet.io(7-sec).mp4" type=video/mp4>
   </video>
@@ -175,7 +175,7 @@
 
                 <article id="post-5" class="relative blog-item-holder">
                     <div class="post-thumb thumb-image one_third_thumb left">
-                      <video width="700" height="240" controls autoplay>
+                      <video  controls autoplay>
     <source src="http://aqua.nasa.gov/sites/default/files/amsu_western_europe_h264.mov" type=video/ogg>
     <source src="/build/videos/arcnet.io(7-sec).mp4" type=video/mp4>
   </video>
@@ -230,7 +230,7 @@
 
                 <article id="post-5" class="relative blog-item-holder">
                     <div class="post-thumb thumb-image one_third_thumb left">
-                      <video width="700" height="240" controls autoplay>
+                      <video  controls autoplay>
     <source src="http://aqua.nasa.gov/sites/default/files/hsb_brazil_h264.mov" type=video/ogg>
     <source src="/build/videos/arcnet.io(7-sec).mp4" type=video/mp4>
   </video>
@@ -258,7 +258,7 @@
 
                 <article id="post-4" class="relative blog-item-holder">
                     <div class="post-thumb thumb-image two_third_thumb right">
-                      <video width="700" height="240" controls autoplay>
+                      <video  controls autoplay>
     <source src="http://aqua.nasa.gov/sites/default/files/aqua_ceres_h264.mov" type=video/ogg>
     <source src="/build/videos/arcnet.io(7-sec).mp4" type=video/mp4>
   </video>
