--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="content-1170 center-relative">
                 <ul>
                     <li class="left-footer-content">
-                         <i class="fa fa-heart"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>.
+                        <i class="fa fa-hert"></i><a href="https://colorlib.com" target="_blank"></a>.
                     </li>
                     <li class="center-footer-content">
                         <a href="index.html">
@@ -316,12 +316,12 @@
                         </a>
                     </li>
                     <li class="right-footer-contnet">
-                        <a href="#">BIBLIOOGRAPHY</a>
-                        <a href="#">TEAM MEMEBERS</a>
+                        <a href="#"></a>
+                        <a href="#"></a>
 
                     </li>
                     <li class="left-footer-content mobile">
-                         <i class="fa fa-heart"></i> by <a href="" target="_blank">Off to Space</a>.
+                         <i class="fa fa-hert"></i><a href="" target="_blank"></a>.
                     </li>
                 </ul>
             </div>
