--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="content-1170 center-relative">
                 <ul>
                     <li class="left-footer-content">
-                         <i class="fa fa-heart"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>.
+                         <i class="fa fa-heart"></i> by <a href="" target="_blank">Off to Space</a>.
                     </li>
                     <li class="center-footer-content">
                         <a href="index.html">
